# Axum.On.Steroids

./: Cargo.toml  config.example.yaml  config.yaml
.devcontainer/: devcontainer.json
src/: claims.rs  cli_args.rs  error.rs  jwt.rs  lib.rs  openid_configuration.rs  server.rs  state.rs  test.rs  traits.rs  utils.rs
src/extractor/: api_key.rs  authenticated_basic_auth.rs  basic_auth.rs  bearer_token.rs  extractor.rs  json.rs  jwt.rs  mod.rs  optional.rs  path.rs  query.rs  valid_api_key.rs  validated.rs
src/layer/: mod.rs  response_body_tracer.rs
src/middleware/: method_not_allowed.rs  mod.rs  not_found.rs  trace_headers.rs  trace_response_body.rs  validate_api_key_and_put_as_extension.rs
src/middleware/basic_auth/: future.rs  layer.rs  mod.rs  provider.rs  service.rs
src/route/: extract_api_key.rs  extract_api_key_optional.rs  extract_authenticated_basic_auth.rs  extract_bearer_token.rs  extract_jwt_claims.rs  extract_valid_api_key.rs  extract_valid_api_key_optional.rs  mod.rs
src/route/api_key_protected/: api_key_from_extension.rs  app.rs  do_not_use_extension.rs  mod.rs  valid_api_key_from_extension.rs
src/route/base/: app.rs  extract_api_key.rs  extract_basic_auth.rs  extract_bearer_token.rs  extract_valid_api_key.rs  extract_valid_api_key_optional.rs  mod.rs
src/route/books/: app.rs  get_book.rs  mod.rs
src/route/error/: app.rs
src/route/post_json/: app.rs  echo_a_person.rs  mod.rs
src/route/validated/: app.rs  mod.rs  validate_a_person.rs
src/state/: jwks.rs
src/types/: mod.rs  used_api_key.rs  used_basic_auth.rs  used_bearer_token.rs
