[package]
name = "the-axum"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1.37.0", features = ["full"] }

tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }

thiserror = "1.0.61"
anyhow = "1.0.86"

axum = "0.7.5"
axum-extra = { version = "0.9.2", features = ["typed-header"] }
axum-auth = { version = "0.7.0", features = ["auth-basic", "auth-bearer"] }
http-body = "1.0.0"
http-body-util = "0.1.1"

tower = "0.4.13"
tower-http = { version = "0.5.2", features = [
    "trace",
    "cors",
    "fs",
    "decompression-gzip",
    "compression-gzip",
] }

serde = { version = "1.0.203", features = ["derive"] }
serde_yaml = "0.9.34"

utoipa = { version = "4.2.0", features = ["axum_extras"] }
utoipa-swagger-ui = { version = "7.1.0", features = ["axum"] }
utoipa-redoc = { version = "4.0.0", features = ["axum"] }
utoipa-rapidoc = { version = "4.0.0", features = ["axum"] }

derive_more = { version = "0.99.17", features = ["from"] }
derivative = "2.2.0"

schemars = { version = "0.8.21" }

pin-project-lite = "0.2.14"

clap = { version = "4.4.16", features = ["derive", "env"] }
dotenv = "0.15.0"
