[package]
name = "the-axum"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1.39.3", features = ["full"] }

tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }

thiserror = "1.0.63"
anyhow = "1.0.86"

axum = "0.7.5"
axum-extra = { version = "0.9.2", features = ["typed-header"] }
http-body = "1.0.1"
http-body-util = "0.1.2"

tower = "0.5.0"
tower-http = { version = "0.5.2", features = [
    "trace",
    "cors",
    "fs",
    "decompression-gzip",
    "compression-gzip",
] }

serde = { version = "1.0.208", features = ["derive"] }
serde_yaml = "0.9.34"

utoipa = { version = "4.2.0", features = ["axum_extras"] }
utoipa-swagger-ui = { version = "7.1.0", features = ["axum"] }
utoipa-redoc = { version = "4.0.0", features = ["axum"] }
utoipa-rapidoc = { version = "4.0.0", features = ["axum"] }

derive_more = { version = "0.99.17", features = ["from"] }
derivative = "2.2.0"

schemars = { version = "0.8.21" }

pin-project-lite = "0.2.14"

clap = { version = "4.5.16", features = ["derive", "env"] }
dotenv = "0.15.0"

base64 = "0.22.1"

reqwest = { version = "0.12.7", features = ["json"] }

jsonwebtoken = "9.2.0"

validator = { version = "0.18.1", features = ["derive"] }

http = "1.1.0"
futures = "0.3.30"